--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Tear Python Into Pieces
 #header-img: img/home-bg.jpg
 email: rubingkuo@gmail.com
 description: "description"
-keyword: "博客, 个人网站, Android"
-url: "https://rubingguo.com"              # your host, for absolute URL
+keyword: "个人网站, Portfolio"
+url: "https://rubing.us"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 SEOTitle: Rubie Guo
 
