--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: flowero
+title: flowera
 #header-img: img/home-bg.jpg
 email: rubingkuo@gmail.com
 description: "description"
