CHANGE SEO TITLE

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "description"
 keyword: "个人网站, Portfolio"
 url: "https://rubing.us"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-SEOTitle: Rubie Guo
+SEOTitle: UNSWEETENED PYTHON CODE
 
 
 # SNS settings
