--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: flowera
+title: UNSWEETENED PYTHON CODE
 #header-img: img/home-bg.jpg
 email: rubingkuo@gmail.com
 description: "description"
