--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: UNSWEETENED PYTHON CODE
+title: UNSWEETENED BANANA CHIPS
 #header-img: img/home-bg.jpg
 email: rubingkuo@gmail.com
 description: "description"
 keyword: "个人网站, Portfolio"
 url: "https://rubing.us"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-SEOTitle: UNSWEETENED PYTHON CODE
+SEOTitle: UNSWEETENED BANANA CHIPS
 
 
 # SNS settings
