home background fk img

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: UNSWEETENED BANANA CHIPS
-#header-img: img/home-bg.jpg
+header-img: img/home-bg.jpeg
 email: rubingkuo@gmail.com
 description: "description"
 keyword: "个人网站, Portfolio"
