--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: UNSWEETENED BANANA CHIPS
+title: CODER LAND
 header-img: img/home-bg.jpeg
 email: rubingkuo@gmail.com
 description: "description"
